# sss_v2

./: .env  README.md  advanced_strategy_simulation.py  ddl.sql  generate_strategy_tree.py  hello.py  main.py  pyproject.toml  ruff.toml  start_backend.py  strategy_simulation.py  test.ipynb
.cursor/rules/: python-version.mdc  python.mdc
docs/: portfolio_tree_analysis.md  portfolio_workflow_diagram.py  simple_diagram_generator.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ProductDetail.tsx  ProductList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: constraint.ipynb
src/api/: README.md  exceptions.py  main.py  response.py
src/api/routers/: example.py  fund.py
src/config/: README.md  __init__.py  dyn_config.py  example_usage.py  sys_config.py
src/core/: auth.ipynb  models.py
src/database/: init_data.py  script.ipynb
src/database/orm/: __init__.py  _base.py  fund.py  strategy.py
src/db/: README.md  database.py  example_usage.py  models.py  test.ipynb  test_read.py
src/entity/: alpha.py  strategy.py
src/proxy/: alpha.py
src/service/fund/: service.py
src/utils/: time.py  tree_visualizer.py
tests/: test_database.py
