[project]
name = "sss-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "config-center>=1.5.1",
    "employee>=1.4.2",
    "polars>=1.31.0",
    "pydantic-mongo>=3.1.0",
    "pymongo>=4.13.2",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.24",
    "virgo>=3.2.37",
]

[[tool.uv.index]]
url = "http://pypi.sci-inv.cn/simple"
default = true

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "rich>=14.0.0",
]
